correct showcase annotations

--- a/partials/showcase-content.html
+++ b/partials/showcase-content.html
@@ -16,7 +16,6 @@
 					<img src="img/stage1.jpg" class="card-img-top" alt="Information Table">
 					<div class="card-body">
 						<h5 class="card-title">1. Information Table</h5>
-						<a data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne" class="btn btn-primary">Learn more</a>
 					</div>
 				</div>
 			</div>
@@ -25,7 +24,6 @@
 					<img src="img/stage2.jpg" class="card-img-top" alt="Driving Simulation">
 					<div class="card-body">
 						<h5 class="card-title">2. Immersive Experience</h5>
-						<a data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo" class="btn btn-primary">Learn more</a>
 					</div>
 				</div>
 			</div>
@@ -34,7 +32,6 @@
 					<img src="img/stage3.jpg" class="card-img-top" alt="Feedback Wall">
 					<div class="card-body">
 						<h5 class="card-title">3. Feedback Wall</h5>
-						<a data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree" class="btn btn-primary">Learn more</a>
 					</div>
 				</div>
 			</div>
@@ -101,18 +98,20 @@
 			<p>Our main showcase element, the driving simulation, was broken down into four interactive elements which are part of the Horizon system, and four objects which were meant to enhance the driving experience.</p>
 			<div class="col-sm-6">
 				<ul>
-					<li>A. Sliding Knob</li>
-					<li>B. iPad showing Center Stack Display</li>
-					<li>C. iPad showing Cluster Screen</li>
-					<li>D. Reflective film simulating Heads-Up Display (HUD)</li>
+					<li>1. Two widescreen monitors playing a <a href="https://www.youtube.com/watch?v=_nS2FvZ0h2g">driving video</a></li>
+					<li>2. Reflective film simulating Heads-Up Display (HUD)</li>
+					<li>3. Clear acrylic sheet simulating glass windscreen</li>
+					<li>4. iPhone to reflect in HUD film</li>
+					<li>5. iPad showing Cluster Screen</li>
 				</ul>
 			</div>
 			<div class="col-sm-6">
 				<ul>
-					<li>1. iPhone to reflect in HUD film</li>
-					<li>2. Two widescreen monitors playing a <a href="https://www.youtube.com/watch?v=_nS2FvZ0h2g">driving video</a></li>
-					<li>3. Pedals</li>
-					<li>4. Steering Wheel</li>
+					<li>6. iPad showing Center Stack Display</li>
+					<li>7. Horizon Sliding Knob</li>
+					<li>8. Pedals</li>
+					<li>9. Steering Wheel</li>
+					<li>10. Real car seat</li>
 				</ul>
 			</div>
 		</div>
