--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -59,6 +59,7 @@ img {
 
 .nav-container {
   background-color: #fefcfb;
+  /* box-shadow: 0 1rem 1rem 2rem white; */
 }
 
 .nav-link {
@@ -210,6 +211,9 @@ button.navbar-toggler {
   body.poster nav ul li ul.poster,
   body.nextsteps nav ul li ul.nextsteps {
     display: block;
+  }
+  .nav-container {
+    box-shadow: unset;
   }
   .main-content section:first-child {
     padding-top: unset !important;
